# RestaurantRecommender

./: .eslintignore  .eslintrc.js  .gitignore  .htmlhintrc  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .stylelintignore  .stylelintrc.json  CODE_OF_CONDUCT.md  LICENSE  README.md  commitlint.config.js  docker-compose.yml  dump.rdb  example.env  package.json
apps/: .gitignore
apps/backend/: .gitignore  api_documentation.yaml  dump.rdb  manage.py  pyproject.toml  recommendation_output.json  requirements.txt  sonar-project.properties
apps/backend/backend/: __init__.py  celery.py  settings.py  urls.py  views.py
apps/backend/custom_commands/management/: __init__.py
apps/backend/custom_commands/management/commands/: __init__.py  superuser.py
apps/backend/data/: XGBoost.pkl  __init__.py  additional_restaurants_and_aspects_01.json  restaurant_aspects_new.json  restaurants.json
apps/backend/jmeter/: Data Integrity Test Plan for Restaurant and Aspect Table.jmx  Database Testing.jmx
apps/backend/restaurant_recommender/: __init__.py  admin.py  apps.py  models.py  predictions.py  serializers.py  tasks.py  urls.py  views.py
apps/backend/restaurant_recommender/management/: __init__.py
apps/backend/restaurant_recommender/management/commands/: load_missing_photos.py  load_new_aspects_data.py  load_pickle_data.py  load_restaurant_data.py  load_restaurant_data_with_zones.py  load_restaurants_and_aspects_data.py  upload_price.py
apps/backend/restaurant_recommender/migrations/: 0001_initial.py  0002_initial.py  0003_remove_aspect_customer_experience.py  0004_aspect_count.py  0005_alter_aspect_count.py  0006_restaurant_zone.py  0007_predictionmodel.py  0008_weatherdata.py  0009_restaurant_location_id.py  0010_aspect_restaurant__restaur_fa65dd_idx_and_more.py  0011_restaurant_attributes_restaurant_cuisine_and_more.py  0012_alter_restaurant_hours_of_operation_and_more.py  0013_remove_restaurant_parking_details.py  0014_alter_restaurant_telephone.py  0015_restaurant_awards_restaurant_public_transit.py  0016_restaurant_photo_url.py  0017_remove_restaurant_restaurant__locatio_3a8721_idx_and_more.py  0018_restaurant_location_id.py  0019_restaurant_address_restaurant_ambience_rating_and_more.py  0020_remove_restaurant_negative_aspects_and_more.py  0021_restaurant_dress_code_restaurant_positive_aspects.py  0022_remove_restaurant_positive_aspects.py  0023_remove_restaurant_restaurant__neighbo_9e2620_idx_and_more.py  0024_alter_restaurant_photo_url.py  0025_alter_restaurant_photo_url.py  0026_alter_restaurant_photo_url.py  0027_remove_restaurant_price.py  0028_restaurant_price.py  0029_remove_restaurant_photo_url.py  0030_restaurant_photo_url.py
apps/backend/restaurant_recommender/tests/: __init__.py  tests.py
apps/backend/tests/: __init__.py  locustfile.py  selenium_tests.py
apps/backend/tests/curl_tests/: API_tests.md
apps/backend/tests/manual_tests/: test_cors.html
apps/backend/user_management/: __init__.py  admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/backend/user_management/management/commands/: create_fake_user_csv.py  fake_preferences.py  fake_users.py  generate_users_with_preferences.py  like_restaurants_based_on_preferences.py  populate_preferences.py  test_recommend_restaurants.py
apps/backend/user_management/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py  0003_profile_slug_alter_user_groups_and_more.py  0004_alter_profile_avatar.py  0005_remove_bookmark_cuisine_remove_bookmark_menu_and_more.py  0006_remove_bookmark_restaurants.py  0007_bookmark_restaurants.py  0008_delete_bookmark.py  0009_bookmark.py  0010_alter_bookmark_restaurants_alter_bookmark_user.py  0011_bookmark_last_accessed.py  0012_bookmark_bookmark_user_id_c654d1_idx_and_more.py  0013_rename_bookmark_user_id_c654d1_idx_preference__user_id_558b60_idx_and_more.py  0014_remove_bookmark_dress_code_and_more.py  0015_bookmark_dress_code_bookmark_positive_aspects_and_more.py  0016_bookmark_restaurants.py  0017_rename_restaurants_bookmark_restaurant_name.py  0018_rename_restaurant_name_bookmark_restaurants.py  0019_rename_restaurants_bookmark_restaurant_name.py  0020_alter_bookmark_user.py  0021_rename_restaurant_name_bookmark_restaurants.py  0022_preference_userlikedrestaurant_userpreference.py  0023_remove_bookmark_positive_aspects_and_more.py
apps/backend/user_management/tests/: tests.py
apps/docker/backend/: Dockerfile
apps/docker/frontend/: Dockerfile
apps/docker/nginx/: Dockerfile  (+1 more)
apps/frontend/: index.html  jest.config.cjs  jest.setup.js  package.json  tailwind.config.js  vite.config.js
docs/Development Workflow/: Development Workflow.md
docs/Repository Documentation/: README.md
(+76 files in other folders)
